# mcp-candledata

./: README.md  pyproject.toml
docs/: architecture.md
src/mcp_candledata/: __init__.py  datasource.py  schemas.py  server.py
